# Public-Regulation-MCP-Builder

./: .dockerignore  .env.example  .env.shared.example  .gitattributes  .gitignore  .release-hygiene-allowlist.json  AGENTS.md  CONTRIBUTING.md  Dockerfile  INSTALL_AND_RUN.bat  LICENSE  MANIFEST.in  README.md  RUN_APP.bat  SECURITY.md  START_HERE.bat  THIRD_PARTY_NOTICES.md  docker-compose.shared.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-release.yml  preprocessing-change-policy.yml  preprocessing-regression.yml
app/: __init__.py  main.py
app/agents/: __init__.py  base.py  execution_audit.py  execution_guard.py  hermes_agent.py  metadata_agent.py  provider_config.py  review_context.py  review_executor.py  review_policy.py  structure_review_agent.py  table_narration_agent.py
app/api/: routes_documents.py  routes_exports.py  routes_institutions.py  routes_jobs.py  routes_rag.py
app/core/: api_audit.py  batch_failure_alerting.py  config.py  failure_classification.py  input_limits.py  institution_profiles.py  logging.py  pipeline.py  request_body_limit.py  security.py  tenant_access.py
app/ingestion/: __init__.py  embedding_adapter.py  vector_adapter.py  vector_integrity.py  vector_upsert.py
app/mcp_server/: __init__.py  regulation_server.py  regulation_tools.py
app/parsers/: __init__.py  archive_safety.py  base.py  docx_parser.py  factory.py  hwp_parser.py  hwpx_parser.py  pdf_parser.py  xml_safety.py
app/processors/: __init__.py  answer_profile.py  article_validity.py  chunker.py  exporter.py  kordoc_table_matcher.py  kordoc_table_parser.py  metadata_extractor.py  normalizer.py  quality_gate.py  structure_detector.py  table_extractor.py  validator.py
app/rag/: __init__.py  extractive_answer.py  local_llm.py  output_filter.py
app/retrieval/: __init__.py  bm25_index.py  hierarchical_index.py  searcher.py  tokenizer.py
app/schemas/: __init__.py  chunk.py  document.py  institution.py  mcp.py  parsed.py  quality.py  run.py  structure.py  validation.py
app/services/: approval_governance.py  approval_validation.py  document_service.py  kordoc_reprocessing_service.py  processing_service.py  regulation_catalog_service.py  regulation_lifecycle_service.py  (+4 more)
config/: institution_profiles.example.json  quality_profiles.example.json
docs/: harness_engineering_plan_ko.md  hermes_engineering_plan_ko.md  institution_first_regulation_lifecycle_contract_ko.md  mcp_client_config_examples_ko.md  mcp_direct_lookup_policy_ko.md  mcp_institution_scope_runbook_ko.md  mcp_quickconnect_ko.md  mcp_tool_contract_ko.md  operator_quickstart_ko.md  overnight_mcp_reliability_plan_ko.md  pilot_acceptance_and_evidence_ko.md  pilot_overview_ko.md  prd_integrated_rag_chatbot_ko.md  preprocessing_change_governance_ko.md  public-institution-operations-runbook.md  public_github_release_checklist_ko.md  public_institution_pilot_plan.md  public_release_report_allowlist.example.json  public_release_report_allowlist.json  public_repository_history_policy_ko.md  shared_deployment_runbook_ko.md  ui_ux_release_scope_ko.md
frontend/: streamlit_app.py
packaging/: INSTALL_KORDOC_KO.ps1  PR-MCP-Builder.spec  README_RUN_KO.txt  windows_launcher.py
scripts/: __init__.py  analyze_regulation_corpus.py  apply_reapproval_plan_shadow.py  audit_answer_accuracy_evidence_depth.py  audit_mcp_index_visibility.py  audit_mcp_product_readiness.py  audit_parser_goldset_batch_scenarios.py  audit_public_release_readiness.py  audit_release_hygiene.py  audit_runtime_version_drift.py  audit_table_preprocessing_claim_gate.py  audit_temporal_metadata_coverage.py  backfill_approval_review_events.py  backfill_chunk_profile_ids.py  backfill_temporal_metadata.py  batch_process_regulations.py  benchmark_mcp_cold_start.py  benchmark_mcp_concurrent_queries.py  benchmark_mcp_queries.py  build_answer_accuracy_query_seedpack.py  build_answer_blocker_review_map.py  build_approval_evidence.py  build_approval_review_batches.py  build_approval_review_triage.py  build_approval_sha_drift_repair_plan.py  build_approval_worklist.py  build_codex_ai_review_decision_packet.py  build_github_publish_execution_plan.py  build_github_publish_readiness_summary.py  build_human_review_evidence_bundle.py  build_institution_profile_registry_from_batch.py  build_kordoc_local_table_match_packet.py  build_kordoc_table_review_packet.py  build_mcp_answer_evidence_bundle.py  build_mcp_handoff_report.py  build_mcp_performance_load_evidence.py  build_mcp_readiness_authority.py  build_mcp_readiness_remediation_plan.py  build_mcp_temporal_product_readiness_bundle.py  build_parser_10doc_codex_review_report.py  (+119 more)
tests/: test_agent_review_execution_audit.py  test_agent_review_execution_guard.py  test_agent_review_executor.py  test_agent_review_policy.py  test_analyze_regulation_corpus_parsing_accuracy.py  test_answer_profile.py  test_answer_reference_alignment.py  test_api_audit.py  test_api_input_limits.py  test_api_job_contract.py  test_api_sample_e2e.py  test_api_security.py  test_api_tenant_isolation.py  test_api_upload_admission.py  test_apply_reapproval_plan_shadow.py  test_approval_governance.py  test_approval_governance_invariants.py  test_article_validity.py  test_audit_answer_accuracy_evidence_depth.py  test_audit_mcp_index_visibility.py  test_audit_mcp_product_readiness.py  test_audit_parser_goldset_batch_scenarios.py  test_audit_public_release_readiness.py  test_audit_release_hygiene.py  test_audit_runtime_version_drift.py  test_audit_table_preprocessing_claim_gate.py  test_audit_temporal_metadata_coverage.py  test_backfill_approval_review_events.py  test_backfill_chunk_profile_ids.py  test_backfill_temporal_metadata.py  test_batch_process_regulations.py  test_benchmark_mcp_cold_start.py  test_benchmark_mcp_concurrent_queries.py  test_benchmark_mcp_queries.py  test_bm25_index.py  test_bm25_structured_metadata.py  test_build_answer_accuracy_query_seedpack.py  test_build_answer_blocker_review_map.py  test_build_approval_evidence.py  test_build_approval_review_batches.py  (+201 more)
(+4 files in other folders)
